# ArcticEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
src/: CMakeLists.txt  main.cpp
src/editor/: CMakeLists.txt
src/editor/engine/: CMakeLists.txt
src/editor/engine/include/engine/: arctic_engine.h
src/editor/engine/src/: arctic_engine.cpp  vulkan_loader.cpp  vulkan_loader.h
src/editor/private/engine/: CMakeLists.txt  vulkan_loader.cpp  vulkan_loader.h
src/editor/public/engine/: arctic_engine.h
src/editor/utilities/: CMakeLists.txt
src/editor/utilities/include/utilities/: Application.h  file_utility.h
src/editor/utilities/src/: file_utility.cpp
src/engine/: CMakeLists.txt  arctic_engine.cpp  arctic_engine.h
src/game/: CMakeLists.txt  config.h.in  game.cpp
